# sdl-project

./: CMakeLists.txt  LICENSE
src/: app.cpp  app.hpp  main.cpp
